Attribute a specific style to /me.
Former-commit-id: f6d6dd0510f0f7d7fc1555b52e1a55341f4227aa

--- a/static/style.css
+++ b/static/style.css
@@ -285,7 +285,7 @@ audio + a {
 	color: #3C3;
 }
 
-.log, .part td:first-child {
+.log, .part td:first-child, .me {
 	text-align: center;
 }
 
@@ -295,6 +295,14 @@ audio + a {
 
 .kick {
 	color: #F33;
+}
+
+.me {
+	color: #1AC;
+}
+
+.me td:nth-child(2) {
+	font-style: italic;
 }
 
 .btn {
