--- a/static/style.css
+++ b/static/style.css
@@ -54,6 +54,7 @@ html, body {
 	font-family: Verdana, 'DejaVu Sans', 'Bitstream Vera Sans', Geneva, sans-serif;
 	font-size: 15px;
 	background: #f9f9f9;
+	max-height: 100%;
 	height: 100%;
 	width: 100%;
 	color: #000;
