didnt mean to remove that

--- a/static/style.css
+++ b/static/style.css
@@ -759,6 +759,7 @@ select {
 }
 
 .night #underlay {
+    -webkit-filter: invert(50%) brightness(200%);
     filter: invert(50%) brightness(200%);
 }
 
