css enfin réparé
Former-commit-id: b1bbacb578bb742f35edf18196c4e9d1a0877932

--- a/static/style.css
+++ b/static/style.css
@@ -508,7 +508,7 @@ ul > li > div > div:last-child > i {
 }
 
 #window > div:last-child > div {
-	height: 42px;
+	height: 42px; /* we */ 
 	padding: 10px 115px;
 }
 
